Revision history for Export::Lexical

0.0.6
    - Added github repo to dist metadata.
    - Added min perl version to dist metadata.

0.0.5  Sat Oct  3 11:32:12 PDT 2015
    - License changed to MIT.
    - Addressed CPAN Testers report
      <http://www.cpantesters.org/cpan/report/8b13e906-6935-11e5-98c1-2ff5d0d03245>.
    - Removed use of experimental features (smart match, given/when, my $_).
    - Removed Build.PL.
    - Removed t/0*.t tests, which were just silly boilerplate.

0.0.4  Sun Oct 17 21:51:20 PDT 2010
    - Moved subroutine creation and exporting to the import() routine instead
      of the BEGIN implied by 'use'.  This allows multiple packages declared
      in the same file to use Export::Lexical.
    - Moved exporting of the calling class's subroutines to the generated
      import() method instead of the CHECK block.  This makes exporting work
      as expected.  <https://rt.cpan.org/Ticket/Display.html?id=48824>
    - Fixed a warning being generated by the smart match operator that caused
      warn.t to fail.

0.0.3  Fri Oct 10 17:10:19 PDT 2008
    - Default behavior is now to raise an exception when the subroutine is not
      imported into the current scope.
    - Behavior may be modified with the :silent or :warn parameters.

0.0.2  Wed Oct  8 21:12:48 PDT 2008
    - Added v5.10 requirement to Build.PL and Makefile.PL.

0.0.1  Wed Oct  8 13:26:52 2008
    - Initial release.