@@ -3,6 +3,8 @@ Revision history for Export::Lexical
 0.0.6
     - Added github repo to dist metadata.
     - Added min perl version to dist metadata.
+    - Fixed pod warning
+    - Added SEE ALSO entries for other lexical scope related exporter modules.
 
 0.0.5  Sat Oct  3 11:32:12 PDT 2015
     - License changed to MIT.
